Edit lesson on pronouns

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -57,31 +57,41 @@
 
             <div class="bg-second-color text-first-color p-3">
 
-                <h2>Subject Pronouns</h2>
+                <h2>Uninflected and Inflected Pronouns</h2>
 
                 <table class="table table-dark table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th scope="col">English</th>
-                            <th scope="col">Pashto</th>
+                            <th scope="col">Pashto (Uninflected)</th>
+                            <th scope="col">Pashto (Inflected)</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>I</td>
                             <td><span class="text-pashto">زه</span></td>
+                            <td><span class="text-pashto">ما</span></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
                             <td><span class="text-pashto">ته</span></td>
+                            <td><span class="text-pashto">تا</span></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
                             <td><span class="text-pashto">تاسو</span>/<span class="text-pashto">تاسې</span></td>
+                            <td><span class="text-pashto">تاسو</span>/<span class="text-pashto">تاسې</span></td>
                         </tr>
                         <tr>
-                            <td>He/she/it</td>
+                            <td>He/it</td>
                             <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span></td>
+                        </tr>
+                        <tr>
+                            <td>She/it</td>
+                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغې</span></td>
                         </tr>
                         <tr>
                             <td>We</td>
