Edit lesson on pronouns

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -96,9 +96,11 @@
                         <tr>
                             <td>We</td>
                             <td><span class="text-pashto">مونږ</span>/<span class="text-pashto">موږ</span></td>
+                            <td><span class="text-pashto">مونږ</span>/<span class="text-pashto">موږ</span></td>
                         </tr>
                         <tr>
                             <td>They</td>
+                            <td><span class="text-pashto">هغوی</span></td>
                             <td><span class="text-pashto">هغوی</span></td>
                         </tr>
                     </tbody>
