Fix issue with the Lessons tab being incorrectly highlighted on certain pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="/pashto/">Pashto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="/pashto/lessons/">Lessons <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="/pashto/lessons/">Lessons</a>
                             </li>
                         </ul>
                     </div>
