--- a/pashto/index.html
+++ b/pashto/index.html
@@ -34,10 +34,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="/pashto/">Pashto</a>
+                                <a class="nav-link" href="/pashto/">Pashto <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="/pashto/lessons/">Lessons <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="/pashto/lessons/">Lessons</a>
                             </li>
                         </ul>
                     </div>
