Add h1 slide animation

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -57,7 +57,7 @@
 
         <div class="container-fluid">
             <b>
-                <h1 class="text-center text-white">Learn Pashto</h1>
+                <h1 class="text-white">Learn Pashto</h1>
 
                 <p class="text-white">Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
                     and why you might want to consider learning it.
