--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -53,7 +53,7 @@
 
             <div class="p-3">
 
-                <h1 class="text-center mt-3">The Pashto Alphabet</h1>
+                <h1 class="mt-3">The Pashto Alphabet</h1>
 
                     <div class="d-flex flex-wrap flex-row mb-5">
 
