--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -53,10 +53,10 @@
 
             <div class="p-3">
 
-                <h1 class="text-center pt-3">Pronouns</h1>
+                <h1 class="pt-3">Pronouns</h1>
 
-                <p>Predictably, this lesson will cover pronouns in Pashto. While pronouns act similarly in both Pashto and English, pronouns
-                    in Pashto sometimes work a bit differently than they do in English. We will explore this idea throughout this lesson.
+                <p>Predictably, this lesson will cover pronouns in Pashto. While pronouns often act similarly in both Pashto and English,
+                    pronouns in Pashto sometimes work a bit differently than they do in English. We will explore this idea throughout this lesson.
                 </p>
 
             </div>
@@ -116,7 +116,16 @@
 
                     <h2>Inflections? What Are Those?</h2>
 
-                    <p></p>
+                    <p>When we're talking about inflections in languages, we mean changes to word forms that take place due to certain
+                        grammatical rules. In general, there are a few rules that tell us when to inflect words in Pashto:
+                    </p>
+
+                    <ul>
+                        <li>If a word is in the company of an adpositional phrase, it will be inflected.</li>
+                        <li>If a word serves as the subject of a transitive verb in the past tense, it will be inflected.</li>
+                        <li>If a word is plural, it can also receive an inflection.</li>
+                    </ul>
+
                 </div>
 
             </div>
