--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -53,7 +53,7 @@
 
             <div class="p-3">
 
-                <h1 class="text-center pt-3">Forming Sentences</h1>
+                <h1 class="pt-3">Forming Sentences</h1>
 
                 <p>Now, we will look at how to form full sentences in Pashto.</p>
 
