--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -51,7 +51,7 @@
 
         <div class="container-fluid p-0 bg-first-color text-white">
 
-            <h1 class="text-center pt-3">Forming Words</h1>
+            <h1 class="pt-3">Forming Words</h1>
 
             <div class="p-3">
 
