--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -49,7 +49,7 @@
         </nav>
 
         <div class="container-fluid p-0 bg-first-color text-white vh-100">
-            <h1>Pashto Lessons</h1>
+            <h1 class="p-3">Pashto Lessons</h1>
 
             <p>Welcome to the page of Pashto lessons! Your journey starts here towards learning this mysterious yet beautiful language.
             Look below to get started!</p>
