--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -48,7 +48,7 @@
             </ol>
         </nav>
 
-        <div class="container-fluid p-0 bg-first-color text-white vh-100">
+        <div class="container-fluid bg-first-color text-white vh-100">
             <h1 class="p-3">Pashto Lessons</h1>
 
             <p>Welcome to the page of Pashto lessons! Your journey starts here towards learning this mysterious yet beautiful language.
