Add stuff to home page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         <div class="container-fluid">
             <h1>Home</h1>
         </div>
+
+        <div class="card">
+
+            <img src="assets/pashto_card.png" class="card-img-top" alt="Pashto">
+
+            <div class="card-body">
+                <h5 class="card-title">Learn Pashto</h5>
+                <p class="card-text">Join me on a journey to learn the beautiful language of Pashto!</p>
+                <a href="/pashto/" class="btn btn-primary">Let's Go!</a>
+            </div>
+
+        </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
