Add stuff to home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h1>Home</h1>
         </div>
 
-        <div class="card">
+        <div class="card w-25 mx-auto mt-5">
 
             <img src="assets/pashto_card.png" class="card-img-top" alt="Pashto">
 
