Experiment with Font Awesome icons

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -50,7 +50,7 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></a></li>
                 <li class="breadcrumb-item active">Pashto</li>
             </ol>
         </nav>
