--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -42,7 +42,7 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Lessons</li>
             </ol>
