Experiment with Font Awesome icons

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -19,7 +19,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house"></i></a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house"></i> Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -42,9 +42,9 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i></a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house"></i> Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
-                <li class="breadcrumb-item"><a href="/pashto/lessons/">Lessons</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book"></i> Lessons</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Pronouns</li>
             </ol>
         </nav>
@@ -112,21 +112,21 @@
                     </tbody>
                 </table>
 
-                <div class="p-3">
+            </div>
 
-                    <h2>Inflections? What Are Those?</h2>
+            <div class="p-3">
 
-                    <p>When we're talking about inflections in languages, we mean changes to word forms that take place due to certain
-                        grammatical rules. In general, there are a few rules that tell us when to inflect words in Pashto:
-                    </p>
+                <h2>Inflections? What Are Those?</h2>
 
-                    <ul>
-                        <li>If a word is in the company of an adpositional phrase, it will be inflected.</li>
-                        <li>If a word serves as the subject of a transitive verb in the past tense, it will be inflected.</li>
-                        <li>If a word is plural, it can also receive an inflection.</li>
-                    </ul>
+                <p>When we're talking about inflections in languages, we mean changes to word forms that take place due to certain
+                    grammatical rules. In general, there are a few rules that tell us when to inflect words in Pashto:
+                </p>
 
-                </div>
+                <ul>
+                    <li>If a word is in the company of an adpositional phrase, it will be inflected.</li>
+                    <li>If a word serves as the subject of a transitive verb in the past tense, it will be inflected.</li>
+                    <li>If a word is plural, it can also receive an inflection.</li>
+                </ul>
 
             </div>
 
