--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house"></i></a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house"></i> Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -38,12 +38,6 @@
             <div id="scroll_progress"></div>
 
         </div>
-
-        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item active" aria-current="page">Home</li>
-            </ol>
-        </nav>
 
         <div class="container-fluid">
             <h1>Home</h1>
