Experiment with Font Awesome icons

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link active" href="/pashto/">Pashto <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pashto/lessons/">Lessons</a>
+                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons</a>
                             </li>
                         </ul>
                     </div>
