--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -44,7 +44,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i> Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
-                <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book"></i> Lessons</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i> Lessons</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Diacritics</li>
             </ol>
         </nav>
