--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="/pashto/">Pashto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pashto/lessons/">Lessons</a>
+                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons</a>
                             </li>
                         </ul>
                     </div>
