--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -29,7 +29,7 @@
                                 <a class="nav-link" href="/pashto/">Pashto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="/pashto/lessons/">Lessons <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons <span class="visually-hidden">(current)</span></a>
                             </li>
                         </ul>
                     </div>
