Experiment with Font Awesome icons

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -73,8 +73,8 @@
                 <h2 class="text-white">Why Learn Pashto?</h2>
 
                 <p class="text-white">If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
-                    very useful. It is the first language of approximately 40% to 55% of Afghanistan’s population, and it is
-                    the second language of approxmiately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
+                    very useful. It is the first language of approximately 40% to 55% of Afghanistan's population, and it is
+                    the second language of approximately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
                     population speaks Pashto.
                 </p>
                 <p class="text-white">Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
