--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -44,7 +44,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i> Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Lessons</li>
+                <li class="breadcrumb-item active" aria-current="page"><i class="fa-solid fa-book pe-2"></i>Lessons</li>
             </ol>
         </nav>
 
