--- a/pashto/index.html
+++ b/pashto/index.html
@@ -27,7 +27,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house pe-2"></i> Home</a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house pe-2"></i>Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -50,14 +50,14 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i> Home</a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i>Home</a></li>
                 <li class="breadcrumb-item active">Pashto</li>
             </ol>
         </nav>
 
         <div class="container-fluid">
             <b>
-                <h1 class="text-white">Learn Pashto</h1>
+                <h1 class="text-white"><i class="fa-solid fa-graduation-cap pe-2"></i>Learn Pashto</h1>
 
                 <p class="text-white">Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
                     and why you might want to consider learning it.
