--- a/pashto/index.html
+++ b/pashto/index.html
@@ -55,29 +55,45 @@
             </ol>
         </nav>
 
-        <div class="container-fluid">
+        <div class="container-fluid text-white p-5">
             <b>
-                <h1 class="text-white"><i class="fa-solid fa-graduation-cap pe-2"></i>Learn Pashto</h1>
 
-                <p class="text-white">Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
-                    and why you might want to consider learning it.
-                </p>
+                <div class="d-flex mb-5">
+                    <div style="padding-right: 100px;">
+                        <h4 class="display-4"><i class="fa-solid fa-graduation-cap pe-2"></i><i>Learn</i></h4>
+                        <h1 class="display-1 text-start">Pashto</h1>
+                    </div>
+                </div>
 
-                <h2 class="text-white">A Little Bit About Pashto</h2>
+                <div class="mx-5 my-auto">
+                    <p class="fs-1">Join me on a journey to learn Pashto, a beautiful language with strong cultures in countries
+                        like Afghanistan and Pakistan.
+                    </p>
+                </div>
 
-                <p class="text-white">Pashto is part of the Iranian division of the Indo-Iranian group of the Indo-European language family.
+                <button type="button" class="btn btn-primary w-100"><i class="fa-solid fa-circle-info pe-2"></i>Tell Me More</button>
+
+                <a href="#about" class="d-block text-center text-white" style="margin-top: 250px;">
+                    <i class="fa-solid fa-arrow-down pe-2"></i>
+                </a>
+
+                <i class="fa-solid fa-angle-down fa-2xl position-absolute text-white" style="bottom: 20px; left: 50%;"></i>
+
+                <h2 id="about">A Little Bit About Pashto</h2>
+
+                <p>Pashto is part of the Iranian division of the Indo-Iranian group of the Indo-European language family.
                     It has roughly 45 to 55 million speakers, most of whom live in Pakistan and Afghanistan. The ethnic
                     Pashtuns, who also make up the largest ethnic group in Afghanistan, claim Pashto as their native language.
                 </p>
 
-                <h2 class="text-white">Why Learn Pashto?</h2>
+                <h2>Why Learn Pashto?</h2>
 
-                <p class="text-white">If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
+                <p>If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
                     very useful. It is the first language of approximately 40% to 55% of Afghanistan's population, and it is
                     the second language of approximately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
                     population speaks Pashto.
                 </p>
-                <p class="text-white">Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
+                <p>Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
                     not have very many speakers. However, interestingly, the number of Pashto speakers is roughly double
                     the number of Dutch speakers, and Dutch is certainly a respectible language! The point is that Pashto
                     has plenty of speakers.
