Experiment with new page layout

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -74,10 +74,8 @@
                 <button type="button" class="btn btn-primary w-100"><i class="fa-solid fa-circle-info pe-2"></i>Tell Me More</button>
 
                 <a href="#about" class="d-block text-center text-white" style="margin-top: 250px;">
-                    <i class="fa-solid fa-arrow-down pe-2"></i>
+                    <i class="fa-solid fa-angle-down fa-2xl"></i>
                 </a>
-
-                <i class="fa-solid fa-angle-down fa-2xl position-absolute text-white" style="bottom: 20px; left: 50%;"></i>
 
                 <h2 id="about">A Little Bit About Pashto</h2>
 
