--- a/pashto/index.html
+++ b/pashto/index.html
@@ -59,7 +59,7 @@
             <b>
 
                 <div class="d-flex mb-5">
-                    
+
                     <div style="padding-right: 100px;">
                         <h4 class="display-4"><i class="fa-solid fa-graduation-cap pe-2"></i><i>Learn</i></h4>
                         <h1 class="display-1 text-start">Pashto</h1>
@@ -75,7 +75,7 @@
 
                 <button type="button" class="btn btn-primary w-100"><i class="fa-solid fa-circle-info pe-2"></i>Tell Me More</button>
 
-                <a href="#about" class="d-block text-center text-white" style="margin-top: 250px;">
+                <a href="#about" class="d-block text-center text-white" style="margin-top: 250px; margin-bottom: 50px;">
                     <i class="fa-solid fa-angle-down fa-2xl"></i>
                 </a>
 
