Experiment with new page layout

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -48,7 +48,7 @@
 
         </div>
 
-        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <nav class="ps-3" style="--bs-breadcrumb-divider: '>'; margin-bottom: 200px;" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i>Home</a></li>
                 <li class="breadcrumb-item active">Pashto</li>
