--- a/pashto/index.html
+++ b/pashto/index.html
@@ -60,7 +60,7 @@
 
                 <div class="d-flex mb-5">
 
-                    <div style="padding-right: 100px;">
+                    <div class="me-4 text-center text-md-start">
                         <h4 class="display-4"><i class="fa-solid fa-graduation-cap pe-2"></i><i>Learn</i></h4>
                         <h1 class="display-1 text-start">Pashto</h1>
                     </div>
@@ -93,19 +93,23 @@
                     the second language of approximately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
                     population speaks Pashto.
                 </p>
+
                 <p>Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
                     not have very many speakers. However, interestingly, the number of Pashto speakers is roughly double
                     the number of Dutch speakers, and Dutch is certainly a respectible language! The point is that Pashto
                     has plenty of speakers.
+                </p>
 
-                    One of the main contributers to Pashto's lack of influence on today's media is the fact that a sizeable
+                <p>One of the main contributers to Pashto's lack of influence on today's media is the fact that a sizeable
                     portion of Pashto's speakers are illiterate or have limited literacy. While more and more efforts are being
                     made to increase access to educational opportunities to learn Pashto (especially in Afghanistan and Pakistan),
                     there are still many Pashto speakers who are not able to read or write Pashto. As a native speaker of Pashto
                     who has learned how to read, write, and speak Pashto, I thought that I should make this website so that others,
                     whether native speakers or not, can learn Pashto to the greatest extent possible.
                 </p>
+
             </b>
+            
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
