Attempt to make website more mobile-friendly

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -58,7 +58,7 @@
         <div class="container-fluid text-white p-5">
             <b>
 
-                <div class="d-flex mb-5">
+                <div class="d-flex mb-5 justify-content-center">
 
                     <div class="me-4 text-center text-md-start">
                         <h4 class="display-4"><i class="fa-solid fa-graduation-cap pe-2"></i><i>Learn</i></h4>
