--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house pe-2"></i>Home</a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house me-2"></i>Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -28,7 +28,7 @@
                                 <a class="nav-link" href="/pashto/">Pashto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons</a>
+                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book me-2"></i>Lessons</a>
                             </li>
                         </ul>
                     </div>
