--- a/pashto/index.html
+++ b/pashto/index.html
@@ -27,7 +27,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house pe-2"></i>Home</a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house me-2"></i>Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -37,7 +37,7 @@
                                 <a class="nav-link active" href="/pashto/">Pashto <span class="visually-hidden">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons</a>
+                                <a class="nav-link" href="/pashto/lessons/"><i class="fa-solid fa-book me-2"></i>Lessons</a>
                             </li>
                         </ul>
                     </div>
@@ -50,7 +50,7 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>'; margin-bottom: 200px;" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i>Home</a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house me-2"></i>Home</a></li>
                 <li class="breadcrumb-item active">Pashto</li>
             </ol>
         </nav>
@@ -58,14 +58,13 @@
         <div class="container-fluid text-white p-5">
             <b>
 
-                <div class="d-flex mb-5 justify-content-center">
+                <div class="row align-items-center text-center text-md-start">
 
-                    <div class="me-4 text-center text-md-start">
-                        <h4 class="display-4"><i class="fa-solid fa-graduation-cap pe-2"></i><i>Learn</i></h4>
-                        <h1 class="display-1 text-start">Pashto</h1>
+                    <div class="col-12 col-md-4 mb-4 mb-md-0">
+                        <h1 class="display-1"><i class="fa-solid fa-graduation-cap me-2"></i><i>Learn</i> Pashto</h1>
                     </div>
 
-                    <div class="mx-5 my-auto">
+                    <div class="col-12 col-md-8">
                         <p class="fs-1">Join me on a journey to learn Pashto, a beautiful language with strong cultures in countries
                             like Afghanistan and Pakistan.
                         </p>
@@ -73,7 +72,7 @@
 
                 </div>
 
-                <button type="button" class="btn btn-primary w-100"><i class="fa-solid fa-circle-info pe-2"></i>Tell Me More</button>
+                <button type="button" class="btn btn-primary w-100"><i class="fa-solid fa-circle-info me-2"></i>Tell Me More</button>
 
                 <a href="#about" class="d-block text-center text-white" style="margin-top: 250px; margin-bottom: 50px;">
                     <i class="fa-solid fa-angle-down fa-2xl"></i>
