--- a/pashto/lessons/forming-words/index.html
+++ b/pashto/lessons/forming-words/index.html
@@ -19,7 +19,7 @@
             
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house pe-2"></i>Home</a>
+                    <a class="navbar-brand" href="/"><i class="fa-solid fa-house me-2"></i>Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -29,7 +29,7 @@
                                 <a class="nav-link" href="/pashto/">Pashto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons <span class="visually-hidden">(current)</span></a>
+                                <a class="nav-link active" href="/pashto/lessons/"><i class="fa-solid fa-book me-2"></i>Lessons <span class="visually-hidden">(current)</span></a>
                             </li>
                         </ul>
                     </div>
@@ -42,9 +42,9 @@
 
         <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house pe-2"></i>Home</a></li>
+                <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house me-2"></i>Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
-                <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book pe-2"></i>Lessons</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book me-2"></i>Lessons</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Forming Words</li>
             </ol>
         </nav>
