--- a/pashto/index.html
+++ b/pashto/index.html
@@ -48,7 +48,7 @@
 
         </div>
 
-        <nav class="ps-3" style="--bs-breadcrumb-divider: '>'; margin-bottom: 200px;" aria-label="breadcrumb">
+        <nav class="ps-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house me-2"></i>Home</a></li>
                 <li class="breadcrumb-item active">Pashto</li>
@@ -61,7 +61,7 @@
                 <div class="row align-items-center text-center text-md-start">
 
                     <div class="col-12 col-md-4 mb-4 mb-md-0">
-                        <h1 class="display-1"><i class="fa-solid fa-graduation-cap me-2"></i><i>Learn</i> Pashto</h1>
+                        <h1 class="display-1"><i class="fa-solid fa-graduation-cap me-2"></i><i>Learn</i><br>Pashto</h1>
                     </div>
 
                     <div class="col-12 col-md-8">
