--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Pronouns</title>
+        <title>Verbs</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
                 <li class="breadcrumb-item"><a href="/"><i class="fa-solid fa-house me-2"></i>Home</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
                 <li class="breadcrumb-item"><a href="/pashto/lessons/"><i class="fa-solid fa-book me-2"></i>Lessons</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Pronouns</li>
+                <li class="breadcrumb-item active" aria-current="page">Verbs</li>
             </ol>
         </nav>
 
