--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -61,7 +61,7 @@
 
             <div class="bg-second-color text-first-color p-3">
 
-                <h2>Copula Verbs</h2>
+                <h2>Copula Verbs (Present Tense)</h2>
 
                 <p>What on Earth are copula verbs? Well, they can essentially be thought of as verbs connecting subjects of sentences
                     to other descriptive words. Verbs like "to be" in English come to mind here. We will look at some of these "to be"
@@ -119,6 +119,71 @@
                             <td><span class="text-pashto">هغوی</span></td>
                             <td>Are</td>
                             <td><span class="text-pashto">دي</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h2>Copula Verbs (Past Tense)</h2>
+
+                <p>Here, we'll look at the same verbs. The only difference is that these ones are in the past tense.</p>
+
+                <table class="table table-dark table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">English Pronoun</th>
+                            <th scope="col">Pashto Pronoun</th>
+                            <th scope="col">English Verb</th>
+                            <th scope="col">Pashto Verb</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>I</td>
+                            <td><span class="text-pashto">زه</span></td>
+                            <td>Am</td>
+                            <td><span class="text-pashto">وم</span></td>
+                        </tr>
+                        <tr>
+                            <td>You (singular)</td>
+                            <td><span class="text-pashto">ته</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وې</span></td>
+                        </tr>
+                        <tr>
+                            <td>You (plural)</td>
+                            <td><span class="text-pashto">تاسو/تاسې</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وئ</span></td>
+                        </tr>
+                        <tr>
+                            <td>He/it</td>
+                            <td><span class="text-pashto">هغه</span></td>
+                            <td>Is</td>
+                            <td><span class="text-pashto">و</span></td>
+                        </tr>
+                        <tr>
+                            <td>She/it</td>
+                            <td><span class="text-pashto">هغه</span></td>
+                            <td>Is</td>
+                            <td><span class="text-pashto">وه</span></td>
+                        </tr>
+                        <tr>
+                            <td>We</td>
+                            <td><span class="text-pashto">مونږ/موږ</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وو</span></td>
+                        </tr>
+                        <tr>
+                            <td>They (masculine)</td>
+                            <td><span class="text-pashto">هغوی</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وو</span></td>
+                        </tr>
+                        <tr>
+                            <td>They (feminine)</td>
+                            <td><span class="text-pashto">هغوی</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وې</span></td>
                         </tr>
                     </tbody>
                 </table>
