Fix bad English past tense verbs

--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -140,49 +140,49 @@
                         <tr>
                             <td>I</td>
                             <td><span class="text-pashto">زه</span></td>
-                            <td>Am</td>
+                            <td>Was</td>
                             <td><span class="text-pashto">وم</span></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
                             <td><span class="text-pashto">ته</span></td>
-                            <td>Are</td>
+                            <td>Were</td>
                             <td><span class="text-pashto">وې</span></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
                             <td><span class="text-pashto">تاسو/تاسې</span></td>
-                            <td>Are</td>
+                            <td>Were</td>
                             <td><span class="text-pashto">وئ</span></td>
                         </tr>
                         <tr>
                             <td>He/it</td>
                             <td><span class="text-pashto">هغه</span></td>
-                            <td>Is</td>
+                            <td>Was</td>
                             <td><span class="text-pashto">و</span></td>
                         </tr>
                         <tr>
                             <td>She/it</td>
                             <td><span class="text-pashto">هغه</span></td>
-                            <td>Is</td>
+                            <td>Was</td>
                             <td><span class="text-pashto">وه</span></td>
                         </tr>
                         <tr>
                             <td>We</td>
                             <td><span class="text-pashto">مونږ/موږ</span></td>
-                            <td>Are</td>
+                            <td>Were</td>
                             <td><span class="text-pashto">وو</span></td>
                         </tr>
                         <tr>
                             <td>They (masculine)</td>
                             <td><span class="text-pashto">هغوی</span></td>
-                            <td>Are</td>
+                            <td>Were</td>
                             <td><span class="text-pashto">وو</span></td>
                         </tr>
                         <tr>
                             <td>They (feminine)</td>
                             <td><span class="text-pashto">هغوی</span></td>
-                            <td>Are</td>
+                            <td>Were</td>
                             <td><span class="text-pashto">وې</span></td>
                         </tr>
                     </tbody>
