Fix bad English past tense verbs

--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -123,6 +123,10 @@
                     </tbody>
                 </table>
 
+            </div>
+
+            <div class="p-3">
+
                 <h2>Copula Verbs (Past Tense)</h2>
 
                 <p>Here, we'll look at the same verbs. The only difference is that these ones are in the past tense.</p>
