Add future tense copula verbs

--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -194,6 +194,65 @@
                 
             </div>
 
+            <div class="bg-second-color text-first-color p-3">
+
+                <h2>Copula Verbs (Future Tense)</h2>
+
+                <p>Below are the future tense versions of the same verbs seen above. There is an important nuance to note, however: with
+                    these future tense verbs, the word <span class="text-pashto">به</span> is used before the subject pronoun.
+                </p>
+
+                <table class="table table-dark table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">English Pronoun</th>
+                            <th scope="col">Pashto Pronoun</th>
+                            <th scope="col">English Verb</th>
+                            <th scope="col">Pashto Verb</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>I</td>
+                            <td><span class="text-pashto">زه</span></td>
+                            <td>Am</td>
+                            <td><span class="text-pashto">یم</span></td>
+                        </tr>
+                        <tr>
+                            <td>You (singular)</td>
+                            <td><span class="text-pashto">ته</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">یې</span></td>
+                        </tr>
+                        <tr>
+                            <td>You (plural)</td>
+                            <td><span class="text-pashto">تاسو/تاسې</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">یئ</span></td>
+                        </tr>
+                        <tr>
+                            <td>He/she/it</td>
+                            <td><span class="text-pashto">هغه</span></td>
+                            <td>Is</td>
+                            <td><span class="text-pashto">وي</span></td>
+                        </tr>
+                        <tr>
+                            <td>We</td>
+                            <td><span class="text-pashto">مونږ/موږ</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">یو</span></td>
+                        </tr>
+                        <tr>
+                            <td>They</td>
+                            <td><span class="text-pashto">هغوی</span></td>
+                            <td>Are</td>
+                            <td><span class="text-pashto">وي</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
