Add future tense copula verbs

--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -199,7 +199,7 @@
                 <h2>Copula Verbs (Future Tense)</h2>
 
                 <p>Below are the future tense versions of the same verbs seen above. There is an important nuance to note, however: with
-                    these future tense verbs, the word <span class="text-pashto">به</span> is used before the subject pronoun.
+                    these future tense verbs, the word <span class="text-pashto">به</span> is used after the subject pronoun and before the verb.
                 </p>
 
                 <table class="table table-dark table-striped table-bordered table-hover">
