--- a/pashto/lessons/verbs/index.html
+++ b/pashto/lessons/verbs/index.html
@@ -214,38 +214,38 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span></td>
-                            <td>Am</td>
+                            <td><span class="text-pashto">زه (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">یم</span></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span></td>
-                            <td>Are</td>
+                            <td><span class="text-pashto">ته (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">یې</span></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو/تاسې</span></td>
-                            <td>Are</td>
+                            <td><span class="text-pashto">تاسو/تاسې (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">یئ</span></td>
                         </tr>
                         <tr>
                             <td>He/she/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
-                            <td>Is</td>
+                            <td><span class="text-pashto">هغه (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">وي</span></td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ/موږ</span></td>
-                            <td>Are</td>
+                            <td><span class="text-pashto">مونږ/موږ (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">یو</span></td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی</span></td>
-                            <td>Are</td>
+                            <td><span class="text-pashto">هغوی (به)</span></td>
+                            <td>Will be</td>
                             <td><span class="text-pashto">وي</span></td>
                         </tr>
                     </tbody>
