Add IPA pronunciations

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -112,7 +112,8 @@
                     </li>
 
                     <ul class="fs-3">
-                        <li><b>[t̪ə 'ʃpəɡ.wiʃt̪ kɪ.tɑ'bu.na la're]</b></li>
+                        <li><b>[t̪ə 'ʃpəɡ.wiʃt̪ kɪ.t̪ɑ'bu.na la're]</b></li>
+                    </ul>
 
                 </ul>
 
@@ -139,11 +140,17 @@
 
                 <ul class="fs-3">
                     <li><span class="text-pashto">څنګه؟</span> - How?</li>
+                    <ul><li><b>[ˈt͡san.ɡa]</b></li></ul>
                     <li><span class="text-pashto">څوک؟</span> - Who?</li>
+                    <ul><li><b>[t͡sok]</b></li></ul>
                     <li><span class="text-pashto">څه؟</span> - What?</li>
+                    <ul><li><b>[t͡sə]</b></li></ul>
                     <li><span class="text-pashto">ولې؟</span> - Why?</li>
+                    <ul><li><b>[ˈwa.le]</b></li></ul>
                     <li><span class="text-pashto">چېرته؟</span> - Where?</li>
+                    <ul><li><b>[ˈt͡ʃer.t̪a]</b></li></ul>
                     <li><span class="text-pashto">کله؟</span> - When?</li>
+                    <ul><li><b>[ˈka.la]</b></li></ul>
                 </ul>
 
                 <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
@@ -162,13 +169,25 @@
                         <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did <span class="text-danger">you</span> <span class="text-primary">see</span> <span class="text-success">the book</span>?
                     </li>
 
+                    <ul>
+                        <li><b>[t̪ɑ ˈwa.le kɪˈt̪ab ˈu.li.də.lo]</b></li>
+                    </ul>
+
                     <li>
                         <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where <span class="text-primary">was</span> <span class="text-danger">she</span>?
                     </li>
 
+                    <ul>
+                        <li><b>[haˈɣa ˈt͡ʃer.t̪a wa]</b></li>
+                    </ul>
+
                     <li>
                         <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were <span class="text-danger">you</span> <span class="text-primary">doing</span>?
                     </li>
+
+                    <ul>
+                        <li><b>[t̪ɑ t͡sə kaˈwəl]</b></li>
+                    </ul>
 
                 </ul>
 
@@ -180,9 +199,17 @@
                         <span class="text-pashto">څه <span class="text-primary">کوې</span>؟</span> - What are you <span class="text-primary">doing</span>? / What do you <span class="text-primary">do</span>?
                     </li>
 
+                    <ul>
+                        <li><b>[t͡sə kaˈwe]</b></li>
+                    </ul>
+
                     <li>
-                        <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
+                        <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">going</span>? / When does he/she/it <span class="text-primary">go</span>?
                     </li>
+
+                    <ul>
+                        <li><b>[ˈka.la d͡zi]</b></li>
+                    </ul>
 
                 </ul>
 
