Add IPA pronunciations

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -204,7 +204,7 @@
                     </ul>
 
                     <li>
-                        <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">going</span>? / When does he/she/it <span class="text-primary">go</span>?
+                        <span class="text-pashto">کله <span class="text-primary">راځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
                     </li>
 
                     <ul>
