Add IPA pronunciations

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -208,7 +208,7 @@
                     </li>
 
                     <ul>
-                        <li><b>[ˈka.la d͡zi]</b></li>
+                        <li><b>[ˈka.la rɑˈd͡zi]</b></li>
                     </ul>
 
                 </ul>
