Add IPA pronunciations

--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -51,7 +51,7 @@
         <div class="container-fluid bg-first-color text-white vh-100">
             <h1 class="p-3">Pashto Lessons</h1>
 
-            <p>Welcome to the page of Pashto lessons! Your journey starts here towards learning this mysterious yet beautiful language.
+            <p>Welcome to the page of Pashto lessons! Your journey starts here toward learning this mysterious yet beautiful language.
             Look below to get started!</p>
 
             <h2><a href="alphabet/">The Pashto Alphabet</a></h2>
