--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -76,38 +76,38 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td><span class="text-pashto">زه</span></td>
-                            <td><span class="text-pashto">ما</span></td>
+                            <td><span class="text-pashto">زه</span> - [zə]</td>
+                            <td><span class="text-pashto">ما</span> - [mɑ]</td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td><span class="text-pashto">ته</span></td>
-                            <td><span class="text-pashto">تا</span></td>
+                            <td><span class="text-pashto">ته</span> - [t̪ə]</td>
+                            <td><span class="text-pashto">تا</span> - [t̪ɑ]</td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
-                            <td><span class="text-pashto">تاسو</span>/<span class="text-pashto">تاسې</span></td>
-                            <td><span class="text-pashto">تاسو</span>/<span class="text-pashto">تاسې</span></td>
+                            <td><span class="text-pashto">تاسو</span> - [ˈt̪a.so]/<span class="text-pashto">تاسې</span> - [ˈt̪a.se]</td>
+                            <td><span class="text-pashto">تاسو</span> - [ˈt̪a.so]/<span class="text-pashto">تاسې</span> - [ˈt̪a.se]</td>
                         </tr>
                         <tr>
                             <td>He/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
-                            <td><span class="text-pashto">هغه</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣə]</td>
                         </tr>
                         <tr>
                             <td>She/it</td>
-                            <td><span class="text-pashto">هغه</span></td>
-                            <td><span class="text-pashto">هغې</span></td>
+                            <td><span class="text-pashto">هغه</span> - [haˈɣa]</td>
+                            <td><span class="text-pashto">هغې</span> - [haˈɣe]</td>
                         </tr>
                         <tr>
                             <td>We</td>
-                            <td><span class="text-pashto">مونږ</span>/<span class="text-pashto">موږ</span></td>
-                            <td><span class="text-pashto">مونږ</span>/<span class="text-pashto">موږ</span></td>
+                            <td><span class="text-pashto">مونږ</span> - [mung]/<span class="text-pashto">موږ</span> - [mug]</td>
+                            <td><span class="text-pashto">مونږ</span> - [mung]/<span class="text-pashto">موږ</span> - [mug]</td>
                         </tr>
                         <tr>
                             <td>They</td>
-                            <td><span class="text-pashto">هغوی</span></td>
-                            <td><span class="text-pashto">هغوی</span></td>
+                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
+                            <td><span class="text-pashto">هغوی</span> - [haˈɣwi]</td>
                         </tr>
                     </tbody>
                 </table>
